Starting to get things together
Signed-off-by: cpw <cpw+github@weeksfamily.ca>